--- a/001 - Encabezados.html
+++ b/001 - Encabezados.html
@@ -3,7 +3,7 @@
 <html lang="ES-es">	<!--Inicio de la página-->
 	
 <head>				<!--Inicio del HEAD-->
-	<meta charset="utf-8"/><br>
+	<meta charset="utf-8"/><br><br>
 	
 					<!--Descripcion de la pagina-->
 	<meta name="Description"  content="Descripcion de la pagina"/>
