--- a/001 - Encabezados.html
+++ b/001 - Encabezados.html
@@ -27,7 +27,7 @@
 					
 	<hgroup>
 		<h1>Esto es un H1 modificado de nuevo</h1>		<!--Encabezados de H1 a H6-->
-		<h2>Esto es un H2</h2>
+		<h2>Esto es un H2</h2><br>
 		<h3>Esto es un H3</h3>
 		<h4>Esto es un H4</h4>
 		<h5>Esto es un H5</h5>
